ISSUE132-GET-single-schedule
