# src/routes/group.js
@@ -9,6 +9,7 @@ const {
   postGroupSchedule,
   putGroupSchedule,
   deleteGroupSchedule,
+  getSingleGroupSchedule,
   postInviteLink,
   getInvitation,
   postGroupJoin,
@@ -26,9 +27,10 @@ router.post('/', createGroup);
 router.get('/:group_id', getGroupDetail);
 router.delete('/:group_id', deleteGroup);
 router.patch('/:group_id', patchGroup);
-router.post('/calendar', postGroupSchedule);
-router.put('/calendar/:id', putGroupSchedule);
-router.delete('/calendar/:id', deleteGroupSchedule);
+router.post('/:group_id/calendar', postGroupSchedule);
+router.get('/calendar/:schedule_id', getSingleGroupSchedule);
+router.put('/calendar/:schedule_id', putGroupSchedule);
+router.delete('/calendar/:schedule_id', deleteGroupSchedule);
 router.get('/:group_id/calendar', getGroupSchedule);
 router.post('/:group_id/invite-link', postInviteLink);
 router.get('/invite-link/:inviteCode', getInvitation);
