# src/routes/user.js
@@ -6,6 +6,7 @@ const {
   patchUserPassword,
   putUserSchedule,
   getUserPersonalSchedule,
+  getSingleUserSchedule,
 } = require('../controllers/user');
 const { getUserSetup, updateUserSetUp } = require('../controllers/userSetup');
 
@@ -15,13 +16,14 @@ const { deleteGroupUser } = require('../controllers/group');
 const router = express.Router();
 
 router.get('/group', getUserGroup);
+router.delete('/group/:group_id', deleteGroupUser);
 router.patch('/profile', patchUserProfile, createToken);
 router.patch('/profile/password', patchUserPassword);
 router.patch('/userSetup/:user_id', updateUserSetUp);
 router.get('/userSetup', getUserSetup);
-router.put('/calendar/:id', putUserSchedule);
 router.get('/calendar', getUserPersonalSchedule);
 router.post('/calendar', postPersonalSchedule);
-router.delete('/group/:group_id', deleteGroupUser);
-router.delete('/calendar/:id', deletePersonalSchedule);
+router.get('/calendar/:schedule_id', getSingleUserSchedule);
+router.put('/calendar/:schedule_id', putUserSchedule);
+router.delete('/calendar/:schedule_id', deletePersonalSchedule);
 module.exports = router;
