# src/utils/validators.js
@@ -55,13 +55,10 @@ const scheduleSchema = Joi.object({
   interval: Joi.number(),
   byweekday: Joi.string(),
   until: Joi.date(),
-  confirmed: Joi.number(),
-  possible: Joi.object(),
-  impossible: Joi.object(),
 });
 
 const groupScheduleSchema = Joi.object({
-  groupId: Joi.number().required(),
+  groupId: Joi.number(),
   title: Joi.string().max(45).required(),
   content: Joi.string(),
   startDateTime: Joi.date(),
@@ -87,7 +84,7 @@ const userScheduleSchema = Joi.object({
 });
 
 const scheduleIdSchema = Joi.object({
-  id: Joi.number().min(0).required(),
+  schedule_id: Joi.number().min(0).required(),
 });
 
 const eventPoroposalSchema = Joi.object({
